--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ tracing = { version = "0.1.43", features = ["log"] }
 walkdir = "2.5.0"
 
 [dev-dependencies]
-tracing-subscriber = "0.3.22"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
