--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -5,7 +5,7 @@ on:
       - 'docs/**'
       - 'README.md'
 
-name: Check, Build and Test
+name: Check and Test
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
