--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,6 @@ tracing = { version = "0.1.43", features = ["log"] }
 walkdir = "2.5.0"
 
 [dev-dependencies]
+serial_test = "3.2.0"
 tempfile = "3.24.0"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
