--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ categories = ["development-tools::testing", "virtualization"]
 description = "A system-level isolation testing library based on QEMU/KVM."
 documentation = "https://docs.rs/qlean"
 edition = "2024"
+exclude = ["/.github"]
 keywords = ["isolation", "testing", "kvm", "qemu"]
 license = "MIT"
 readme = "README.md"
@@ -18,6 +19,7 @@ dir-lock = "0.5.0"
 directories = "6.0.0"
 futures = "0.3"
 nanoid = "0.4.0"
+rand = "0.9.2"
 reqwest = { version = "0.13.1", features = ["stream"] }
 russh = "0.55.0"
 russh-sftp = "2.1.1"
